--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">BioMKRBle</string>
+    <string name="app_name">BioMKR</string>
     <string name="device_name">BioMKR</string>
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="action_calibratesensor">Calibrate sensor</string>
-    
     <string name="title_activity_splash">SplashActivity</string>
-    
     <string name="title_section0">Glucose</string>
     <string name="title_section1">Manual input</string>
     <string name="title_section2">Sensors</string>
